TOC: Ensure TOC spacing is correct when grid is enabled
Fix usage of CSS calc

--- a/resources/skins.vector.styles/components/LanguageButton.less
+++ b/resources/skins.vector.styles/components/LanguageButton.less
@@ -102,7 +102,7 @@
 	@button-padding: 12px;
 	@arrow-width: 18px;
 	position: relative;
-	padding-right: calc( @button-padding + @arrow-width );
+	padding-right: ~'calc( @{button-padding} + @{arrow-width} )';
 	white-space: nowrap;
 
 	&:after {
