--- a/resources/skins.vector.styles/layouts/screen.less
+++ b/resources/skins.vector.styles/layouts/screen.less
@@ -196,13 +196,13 @@ body {
 .mw-table-of-contents-container {
 	// stylelint-disable-next-line plugin/no-unsupported-browser-features
 	position: sticky;
+	float: left;
 	// Defaults to -2em to account for the TOC's top margin
 	// ensuring the TOC is 1.5em (24px) from the top of the viewport
 	// unless .mw-sticky-header-element overrides it.
-	top: calc( 1.5em - @top-margin-sidebar-toc_title_inline );
+	top: ~'calc( 1.5em - @{top-margin-sidebar-toc_title_inline} )';
 
 	.vector-layout-legacy & {
-		float: left;
 		clear: both;
 	}
 }
